Use flyout instead of HeaderView

--- a/SpotiSharp/Views/AuthenticationPage.xaml
+++ b/SpotiSharp/Views/AuthenticationPage.xaml
@@ -5,7 +5,6 @@
                 xmlns:views="clr-namespace:SpotiSharp.Views"
                 x:Class="SpotiSharp.AuthenticationPage">
         <VerticalStackLayout>
-            <views:HeaderView/>
             <Grid Margin="10">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -61,9 +60,9 @@
                 BackgroundColor="{StaticResource Gray900}"
                 HorizontalOptions="Start" />
             <VerticalStackLayout Margin="10">
-                <Label Text="How To Authenticate" FontSize="35" Margin="5,10,10,10"/>
-                <Label Text="1. Login on the spotify developer portal" FontSize="24" Margin="5"/>
-                <Grid Margin="10,0,0,0">
+                <Label Text="How To Authenticate" FontSize="20"/>
+                <Label Text="1. Login on the spotify developer portal" FontSize="15" />
+                <Grid Margin="0,0,0,0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
@@ -74,11 +73,11 @@
                     <Label Grid.Column="0" Grid.Row="0" VerticalOptions="Center" Text="You will need to have Spotify premium to use all features of this application. You can get to the spotify developer portal via this link:"/> 
                     <Button Grid.Column="1" Grid.Row="0" Text="https://developer.spotify.com/dashboard/" Command="{Binding OpenSpotifyDevDashBoard}" BackgroundColor="Transparent" BorderColor="Transparent" Margin="0" Padding="0" VerticalOptions="Center" WidthRequest="300" HeightRequest="10"/>
                 </Grid>
-                <Label Text="2. Create a spotify app" FontSize="24" Margin="5,0,5,5"/>
+                <Label Text="2. Create a spotify app" FontSize="15"/>
                 <Label Text="First click on ''create app'' you can enter any name and description." Margin="10,3,3,3"/>
-                <Label Text="3. Setting the redirect uri" FontSize="24" Margin="5"/>
-                <Label Text="Click on ''edit settings''. Under Redirect URIs enter ''http://127.0.0.1:5000/callback'' this needs to be exact and  click 'add'. After that you need to click save to apply the new settings." Margin="10,3,3,3"/>
-                <Label Text="4. Coping the client id" FontSize="24" Margin="5"/>
+                <Label Text="3. Setting the redirect uri" FontSize="15"/>
+                <Label Text="Click on ''edit settings''. Under Redirect URIs enter ''http://127.0.0.1:5000/callback'' this needs to be exact and  click 'add'. After that you need to click save to apply the new settings." />
+                <Label Text="4. Coping the client id" FontSize="15" />
                 <Label Text="On the main page of the spotify app you have a field called '^Client ID'' copy the id to the right of that and enter it in the input field in the SpotiSharp application. Finally click the ''Connect'' button above." Margin="10,3,3,3"/>
             </VerticalStackLayout>
         </VerticalStackLayout>
