--- a/SpotiSharp/AppShell.xaml
+++ b/SpotiSharp/AppShell.xaml
@@ -6,8 +6,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:SpotiSharp"
     xmlns:views="using:SpotiSharp.Views"
-    Shell.FlyoutBehavior="Disabled"
-    Shell.NavBarIsVisible="false">
+    Shell.FlyoutBehavior="Flyout">
     <ShellContent
         Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
@@ -28,4 +27,11 @@
         Title="Settings"
         ContentTemplate="{DataTemplate views:SettingsPage}"
         Route="SettingsPage" />
+    <Shell.ToolbarItems>
+        <ToolbarItem IconImageSource="settingsicon.png"
+                     Order="Primary"
+                     Priority="0"
+                     Clicked="OnSettingsClicked" >
+        </ToolbarItem>
+    </Shell.ToolbarItems>
 </Shell>
